<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imusic.RegisterActivity"
    android:background="@drawable/register_bg" >

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/register_title"
        android:textColor="@color/RED"
        android:textSize="24sp" />

    <TableLayout
        android:id="@+id/register_TLy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TableRow
            android:id="@+id/register_TLy_R1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/text_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_username"
                android:textColor="@color/WHITE" />
            <EditText
                android:id="@+id/edit_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edit_username" />
        </TableRow>
        <TableRow
            android:id="@+id/register_TLy_R2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/text_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nickname"
                android:textColor="@color/WHITE" />
            <EditText
                android:id="@+id/edit_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edit_nickname" />
        </TableRow>
        <TableRow
            android:id="@+id/register_TLy_R3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/text_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_password"
                android:textColor="@color/WHITE" />
            <EditText
                android:id="@+id/edit_password"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edit_password" />
        </TableRow>
        <TableRow
            android:id="@+id/register_TLy_R4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/text_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_password2"
                android:textColor="@color/WHITE" />
            <EditText
                android:id="@+id/edit_password2"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edit_password2" />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:textColor="@color/WHITE" />
    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:textColor="@color/WHITE" />
</LinearLayout>
