<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imusic.AddCommentActivity"
    android:background="@drawable/pl_bg" >

    <TextView
        android:id="@+id/text_add_commet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_activity_add_commet"
        android:textSize="22sp"
        android:textColor="@color/WHITE" />

    <TableLayout
        android:id="@+id/add_commet_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <TableRow
        android:id="@+id/add_commet_R1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_commentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_commentId"
            android:textColor="@color/WHITE" />

        <EditText
            android:id="@+id/edit_commentId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_commentId"
            android:editable="false" />
    </TableRow>
    <TableRow
        android:id="@+id/add_commet_R2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_commentMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_commentMusic"
            android:textColor="@color/WHITE" />

        <EditText
            android:id="@+id/edit_commentMusic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_commentMusic"
            android:editable="false" />
    </TableRow>
    <TableRow
        android:id="@+id/add_commet_R3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_commentContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_commentContent"
            android:textColor="@color/WHITE" />

        <EditText
            android:id="@+id/edit_commentContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_commentContent" />
    </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/btn_addComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_addComment"
        android:textColor="@color/WHITE" />
    <Button
        android:id="@+id/btn_commentBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:textColor="@color/WHITE" />

</LinearLayout>
