<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_music"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/music_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/music_State"
        android:textColor="@color/WHITE"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/music_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/music_state"
        android:text="@string/music_title"
        android:textColor="@color/WHITE" />
    <TextView
        android:id="@+id/music_singer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/music_title"
        android:text="@string/music_singer"
        android:textColor="@color/WHITE" />

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@+id/music_rate"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle">
		<ImageView
	        android:id="@+id/imgBtn_left"
            android:layout_width="40dp"
	        android:layout_height="40dp"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:contentDescription="@string/imgBtn_left"
	        android:src="@drawable/imgbtn_left" />
		<ImageView
	        android:id="@+id/imgBtn_play"
	        android:layout_width="40dp"
		    android:layout_height="40dp"
	        android:layout_centerInParent="true"
		    android:src="@drawable/imgbtn_play"
	        android:contentDescription="@string/imgBtn_play"
	        android:layout_gravity="center_horizontal" />
		<ImageView
	        android:id="@+id/imgBtn_right"
	        android:layout_width="40dp"
		    android:layout_height="40dp"
		    android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
		    android:src="@drawable/imgbtn_right"
		    android:contentDescription="@string/imgBtn_right"
		    android:layout_gravity="right" />
    </RelativeLayout>

    <TextView
        android:id="@+id/music_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar_music"
        android:layout_alignParentLeft="true"
        android:text="@string/music_rate"
        android:textColor="@color/WHITE" />
    
    <SeekBar
        android:id="@+id/seekBar_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
