<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imusic.ShowItemActivity"
    android:background="@drawable/pl_bg" >

    <TextView
    	android:id="@+id/item_mid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_mid"
        android:textColor="@color/WHITE" />
    <TextView
    	android:id="@+id/item_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_content"
        android:textColor="@color/WHITE" />
    <TextView
    	android:id="@+id/item_uid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_uid"
        android:gravity="right"
        android:textColor="@color/WHITE" />
    <Button
        android:id="@+id/btn_backToComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
		android:textColor="@color/WHITE" />

</LinearLayout>
