<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
    	android:id="@+id/commentMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commentMusic"
        android:textColor="@color/WHITE" />
    <TextView
    	android:id="@+id/commentContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commentContent"
        android:textColor="@color/WHITE" />
    <TextView
    	android:id="@+id/commentUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commentUser"
        android:gravity="right"
        android:textColor="@color/WHITE" />

</LinearLayout>
